[package]
name = "lightsocks-rust"
version = "0.1.0"
authors = ["weaming <garden.yuen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1" # https://docs.rs/bytes/1.0.1/bytes/index.html
serde = { version="1.0.126", features = ["derive"] }
serde_json = "1.0.64"
shellexpand = "2.1.0"
chacha20poly1305 = "0.8.1" # https://docs.rs/chacha20poly1305/0.8.1/chacha20poly1305/ Rust 1.49 or higher.
md5 = "0.7.0"

[[bin]]
name = "lightsocks-server"
path = "src/server/bin/main.rs"

[[bin]]
name = "lightsocks-client"
path = "src/client/bin/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"
